--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "runtu-pixiv-sdk": "^2.0.0-beta.1"
+  },
+  "devDependencies": {
+    "husky": "^9.0.11"
   }
 }
