--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
     "runtu-pixiv-sdk": "^2.0.0-beta.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.1.0",
+    "@commitlint/config-conventional": "^19.1.0",
     "husky": "^9.0.11"
+  },
+  "scripts": {
+    "prepare": "husky",
+    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   }
 }
