--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "@commitlint/config-conventional": "^19.1.0",
     "husky": "^9.0.11"
   },
-  "scripts": {
-    "prepare": "husky",
-    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+  "husky": {
+    "hooks": {
+        "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }  
   }
 }
